# i3mac

./: Cargo.toml  Makefile  README.md
ax_ui/: Cargo.toml
ax_ui/src/: error.rs  lib.rs  observer.rs  window.rs
ax_ui/src/bits/: axui.rs  mod.rs
core_foundation/: Cargo.toml
core_foundation/src/: array.rs  dictionary.rs  error.rs  lib.rs
core_foundation/src/bits/: corefoundation.rs  mod.rs
core_graphics/: Cargo.toml
core_graphics/src/: display.rs  error.rs  keyboard.rs  lib.rs  window.rs
core_graphics/src/bits/: coregraphics.rs  display.rs  event.rs  mod.rs  window.rs
field_index_derive/: Cargo.toml
field_index_derive/src/: lib.rs
foundation/: Cargo.toml
foundation/src/: id_label.rs  label.rs  lib.rs  observer.rs  sys_info.rs  text_layer.rs  window.rs
foundation/src/bits/: foundation.rs  mod.rs
index_field/: Cargo.toml
index_field/src/: lib.rs
main/: Cargo.toml
main/src/: config.rs  container.rs  ctl.rs  display.rs  error.rs  event_loop.rs  lib.rs  log.rs  main.rs  status_bar.rs  sys_info.rs  window.rs  window_manager.rs
main/src/container/: axis.rs  empty.rs  leaf.rs  mod.rs  split.rs  tests.rs
main/src/display/: log.rs  logical.rs  mod.rs  physical.rs  registry.rs  tests.rs
main/src/poll/: error.rs  keyboard.rs  kqueue.rs  mod.rs  mux.rs  observer.rs  pipe.rs
src/: coregraphics.rs  dictionary.rs  display.rs  error.rs  lib.rs  main.rs  window.rs
src/bits/: corefoundation.rs  coregraphics.rs  mod.rs
