[package]
name = "main"
version = "0.3.0"
edition = "2024"

[dependencies]
core_graphics = { path = "../core_graphics" }
core_foundation = { path = "../core_foundation" }
ax_ui = { path = "../ax_ui" }
foundation = { path = "../foundation" }
libc.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
